--- a/README
+++ b/README
@@ -1,23 +1,22 @@
-# Foobar
+# XUIFramework
 
-Foobar is a Python library for dealing with word pluralization.
-
-## Installation
-
-Use the package manager [pip](https://pip.pypa.io/en/stable/) to install foobar.
-
-```bash
-pip install foobar
-```
+Create android UI elements easily, made with kotlin
 
 ## Usage
 
-```python
-import foobar
+```kotlin
+        val list = arrayListOf(
+            TestData("item 1"),
+            TestData("item 2"),
+            TestData("item 3")
+        )
 
-foobar.pluralize('word') # returns 'words'
-foobar.pluralize('goose') # returns 'geese'
-foobar.singularize('phenomena') # returns 'phenomenon'
+        recyclerView.adapter =
+            XAdapter(R.layout.row_list_test, list) { view, item ->
+                //render each item here
+                view.setText(R.id.textTitle, item.name)
+            }
+
 ```
 
 ## Contributing
