--- a/README
+++ b/README
@@ -5,19 +5,19 @@ Create android UI elements easily, made with kotlin
 ## Usage
 
 ```kotlin
-        val list = arrayListOf(
-            TestData("item 1"),
-            TestData("item 2"),
-            TestData("item 3")
-        )
+val list = arrayListOf(
+    TestData("item 1"),
+    TestData("item 2"),
+    TestData("item 3")
+)
 
-        recyclerView.adapter =
-            XAdapter(R.layout.row_list_test, list) { view, item ->
-                //render each item here
-                view.setText(R.id.textTitle, item.name)
-            }
-
+recyclerView.adapter =
+    XAdapter(R.layout.row_list_test, list) { view, item ->
+        //render each item here
+        view.setText(R.id.textTitle, item.name)
+    }
 ```
+[WIKI](https://bitbucket.org/ehsan_hvd/xuiframwork/wiki/Home) for more info 
 
 ## Contributing
 Pull requests are welcome. For major changes, please open an issue first to discuss what you would like to change.
