--- a/xuiframework/src/main/res/values/strings.xml
+++ b/xuiframework/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">XUIFramework</string>
+    <string name="simpleAdapter">Simple adapter</string>
+    <string name="bindingAdapter">Binding adapter</string>
+    <string name="paginationAdapter">Pagination adapter</string>
 </resources>
