--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="simpleAdapter">Simple adapter</string>
     <string name="paginationAdapter">Pagination adapter</string>
     <string name="customViews">Custom views</string>
+    <string name="rtl">rtl</string>
 </resources>
