--- a/xuiframework/src/main/res/values/strings.xml
+++ b/xuiframework/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">XUIFramework</string>
+
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
 </resources>
