spinner, form builder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="simpleAdapter">Simple adapter</string>
     <string name="paginationAdapter">Pagination adapter</string>
     <string name="customViews">Custom views</string>
+    <string name="formBuilder">Form builder</string>
     <string name="rtl">rtl</string>
 </resources>
