--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="customViews">Custom views</string>
     <string name="formBuilder">Form builder</string>
     <string name="rtl">rtl</string>
+    <string name="multiSelectAdapter">Multi Select adapter</string>
 </resources>
