--- a/README
+++ b/README
@@ -1,22 +1,5 @@
-# XUIFramework
+XUIFramework
 
-Create android UI elements easily, made with kotlin
+An android useful UI components and common codes
 
-## Usage
-
-### Easy image using glide
-```xml
-<!-- or you can use GlideImageViewCircle for circle images -->
-<com.tpa.xuiframework.view.GlideImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:url="@{testData.profile}" 
-        app:defaultDrawable="@drawable/ic_launcher" />
-```
-
-[WIKI](https://bitbucket.org/ehsan_hvd/xuiframwork/wiki/Home) for more cool features 
-
-## Contributing
-Pull requests are welcome. For major changes, please open an issue first to discuss what you would like to change.
-
-Please make sure to update tests as appropriate.
+under construction
