--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-XUIFramework
+## XUIFramework
 
 An android useful UI components and common codes
-
-under construction
+for more info check [wiki >](https://github.com/ehsanhvd/XUIFramework/wiki)
