--- a/xuiframework/src/main/res/values/strings.xml
+++ b/xuiframework/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
+    <string name="pleaseWait">Please wait</string>
 </resources>
