writing test and testable codes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">XUIFramwork</string>
+    <string name="app_name">XUIFramework</string>
     <string name="simpleAdapter">Simple adapter</string>
     <string name="paginationAdapter">Pagination adapter</string>
     <string name="customViews">Custom views</string>
